--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.whole-container{
+  max-width: 1024px;
+  width: 100%;
+  height: 100%
+}
+
 .game-title{
   display: block;
   margin: 0 auto;
@@ -14,9 +20,34 @@
   display: block;
   background-color: rgba(128, 128, 128, 0.15);
   position: absolute;
-  height: 500px;
-  width: 500px;
+  max-width: 500px;
+  max-height: 500px;
+  height: 100%;
+  width: 50%;
   margin: 50px 0 0 120px;
+}
+
+/*@media only screen and (min-width: 376px) {
+  .gameboard-container {
+    display: block;
+    background-color: rgba(128, 128, 128, 0.15);
+    position: absolute;
+    max-width: 500px;
+    max-height: 500px;
+    height: 100%;
+    width: 50%;
+    margin: 50px 0 0 120px;
+  }
+}*/
+
+/* iPhone 6 portrait */
+@media only screen and (max-width: 375px) {
+  .gameboard-container{
+    max-height: 482px;
+    height: 100%;
+    width: 95%;
+    margin: 20px 0 0 252px;
+  }
 }
 
 .gameboard{
@@ -65,12 +96,33 @@
   vertical-align: middle;
 }
 
-.scoreboard-container{
+.scoreboard-container {
   display: block;
-  height: 400px;
-  width: 450px;
-  margin: 50px 0 0 800px;
+  max-width: 460px;
+  height: 100%;
+  width: 45%;
+  margin: 50px 0 0 678px;
   position: absolute;
+}
+
+/*@media only screen and (min-width: 376px) {
+  .scoreboard-container {
+    display: block;
+    max-width: 460px;
+    height: 100%;
+    width: 45%;
+    margin: 50px 0 0 678px;
+    position: absolute;
+  }
+}*/
+
+/* iPhone 6 portrait */
+@media only screen and (max-width: 375px) {
+  .scoreboard-container{
+    max-height: 350px;
+    width: 370px;
+    margin: 553px 0 0 94px;
+  }
 }
 
 .name-score-container{
@@ -88,7 +140,7 @@
 
 .player1-name-score-container{
   display: inline-block;
-  margin: 25px 0 0 50px;
+  margin: 0% 0 0 10%;
 }
 
 .player1-score-container{
@@ -96,10 +148,27 @@
   margin: 32px 0 0 82px;
 }
 
-.player2-name-score-container{
+.player2-name-score-container {
   display: inline-block;
-  margin: 370px 0px 0 850px;
+  margin: 7% 0px 0 11%;
 }
+
+@media only screen and (max-width: 375px){
+  .player2-name-score-container{
+    display: block;
+    max-height: 350px;
+    margin: -218px 0 0 400px;
+  }
+}
+
+/*@media only screen and (min-width: 376px) {
+  .player2-name-score-container {
+    display: inline-block;
+    margin: 7% 0px 0 11%;
+  }
+}*/
+
+/* iPhone 6 portrait */
 
 .player2-score-container{
   display: inline-block;
@@ -127,11 +196,21 @@
   display: block;
   position: absolute;
   width: 67px;
-  margin: -237px 0 0 1060px;
+  margin: -47% 0 0 22%;
+}
+
+/* iPhone 6 portrait */
+@media only screen and (max-width: 375px) {
+  .restart{
+    display: block;
+    position: absolute;
+    width: 67px;
+    margin: 9% 0 0 117%;
+  }
 }
 
 .reset-score{
-  margin: 58px 0 0 88px;
+  margin: 11% 0 0 60%;
 }
 
 .centered{
